# h5fortran

./: meson.build  meson_options.txt
meson/: meson.build
src/tests/: meson.build
